[package]
name = "u_rust_client_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["full"] }

tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"

serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.59"
