[package]
name = "u_rust_client_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"], optional = true }
uuid = {version= "1.1.2", optional = true}

reqwest = {version = "0.11.12", optional = true}

winrt-notification = {version = "0.5.1", optional = true}

enigo={version="0.0.14", optional=true}
async-recursion = {version="1.0.0", optional=true}

tokio = { version = "1", features = ["full"] }

tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"

serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.59"
clap = { version = "3.2.22", features = ["derive"] }
async-trait = "0.1.57"

[features]
ble=["dep:btleplug", "dep:uuid"]
http=["dep:reqwest"]
win_notification=["dep:winrt-notification"]
command=[]
simulate=["dep:enigo", "dep:async-recursion"]